[Fix Bug] The first line of searching result is covered by nav bar.

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body { padding-top: 40px; }
+body { padding-top: 60px; }
 
 textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {   
     border-color: rgba(88, 88, 88, 0.8);
